<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sarayut.babealert.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/babys"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_logo"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="26dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/bt_control"
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="20dp"
                        android:background="@color/color_button_main_1">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_iconfinder_icon"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_button_main_1_body"
                        android:padding="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bt_main_1"
                            android:textSize="20dp"
                            android:textColor="@color/color_main_bt_text"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/bt_video"
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:padding="20dp"
                        android:background="@color/color_button_main_2">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/video"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_button_main_2_body"
                        android:padding="20dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bt_main_2"
                            android:textSize="20dp"
                            android:textColor="@color/color_main_bt_text"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/music_bug"
                android:layout_height="90dp"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@color/color_button_main_3"
                        android:padding="20dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_music_note_black_24dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_button_main_3_body"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bt_main_3"
                            android:textColor="@color/color_main_bt_text"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>



</LinearLayout>
