<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sarayut.babealert.Control">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_on_off_system"
            android:textColor="@color/contoll_text_onOff_system"
            android:textSize="18dp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_main_control"
            style="@style/SwitchCompatTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"></android.support.v7.widget.SwitchCompat>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/headContoll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    card_view:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">
                            <ImageView
                                android:id="@+id/video_button"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/webcam_icon" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:textSize="16dp"
                                android:textColor="#000000"
                                android:layout_gravity="center"
                                android:text="ดูลูกน้อย"/>

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/headContoll2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    card_view:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">
                            <ImageView
                                android:id="@+id/song_button"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/play_icon" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:textSize="16dp"
                                android:textColor="#000000"
                                android:layout_gravity="center"
                                android:text="เพลงกล่อม"/>

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </LinearLayout>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                card_view:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:background="@color/color_control_motor"
                        android:gravity="center">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/des_controlmotor_header"
                            android:textColor="@color/color_main_bt_text"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/des_controlmotor_onoff"
                                android:textSize="16dp" />

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sw_motor_control"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"></android.support.v7.widget.SwitchCompat>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/des_controlmotor_level"
                                android:textSize="16dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end">

                                <Spinner
                                    android:id="@+id/sp_morter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/des_controlmotor_timer"
                                android:textSize="16dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end">

                                <Spinner
                                    android:id="@+id/sp_timer_motor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                card_view:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:background="#4CAF50"
                        android:gravity="center">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/des_status_header"
                            android:textColor="@color/color_main_bt_text"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <ImageView
                                android:id="@+id/img_baby_cry"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/baby_happy" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/text_baby_cry_main"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="XXXX"
                                    android:textColor="@color/color_main_bt_text"
                                    android:textSize="14dp" />

                                <TextView
                                    android:id="@+id/text_baby_cry_des"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="8dp"
                                    android:paddingRight="8dp"
                                    android:text="XXXXXX"
                                    android:textSize="14dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                card_view:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:background="#CDDC39"
                        android:gravity="center">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="สถานะการขยับตัว"
                            android:textColor="@color/color_main_bt_text"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="8dp">

                            <ImageView
                                android:id="@+id/img_baby_move"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="8dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/baby_happy" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/text_baby_move_main"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="XXXX"
                                    android:textColor="@color/color_main_bt_text"
                                    android:textSize="14dp" />

                                <TextView
                                    android:id="@+id/text_baby_move_des"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="8dp"
                                    android:paddingRight="8dp"
                                    android:text="XXXXXX"
                                    android:textSize="14dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
